syntax = "proto3";

package dtn;

message SubmitBundleRequest {
  string destination = 1;
  bytes payload = 2;
  uint64 lifetime = 3;
}

message SubmitBundleRespone {
  bool success = 1;
  string message = 2;
}

message ListenBundleRequest { string endpoint = 1; }

message ListenBundleResponse {
  string source = 1;
  bytes payload = 2;
}

message ListNodesRequest {}

message Node {
  string url = 1;
  string status = 2;
  string endpoint = 3;
  bool temporary = 4;
}

message ListNodesResponse { repeated Node nodes = 1; }

message AddNodeRequest { string url = 1; }
message AddNodeResponse {}

message RemoveNodeRequest { string url = 1; }
message RemoveNodeResponse {}

service BundleService {
  rpc SubmitBundle(SubmitBundleRequest) returns (SubmitBundleRespone);
  rpc ListenBundles(ListenBundleRequest) returns (stream ListenBundleResponse);
  rpc ListNodes(ListNodesRequest) returns (ListNodesResponse);
  rpc AddNode(AddNodeRequest) returns (AddNodeResponse);
  rpc RemoveNode(RemoveNodeRequest) returns (RemoveNodeResponse);
}